<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder_title"
            android:textSize="18sp"
            tools:text="Current Character: Fenton Falomar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:measureWithLargestChild="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/choose_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_current_character" />

        <Button
            android:id="@+id/open_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_character" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_character" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_character" />

        <Button
            android:id="@+id/buy_equipment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_equipment" />

    </LinearLayout>

</LinearLayout>